--- a/app/src/app.html
+++ b/app/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="./css/app.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/css/app.css">
 		%sveltekit.head%
 	</head>
 	<body>
