스크립트 위치 이동

--- a/app/src/app.html
+++ b/app/src/app.html
@@ -8,10 +8,10 @@
 		%sveltekit.head%
 	</head>
 	<body>
-		<div>%sveltekit.body%</div>
 		<footer>
 			<p>copylight @ Apache-2.0</p>
 		</footer>
+		%sveltekit.body%
 	</body>
 	
 </html>
